// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component Renders static elements 1`] = `
<div
  className="large-size-container"
>
  <h2
    className="mb-3"
  >
    What have you done this week
     rafa
    ?
  </h2>
  <div
    className="d-flex justify-content-center"
  >
    <button
      className="btn btn-primary btn-lg dashboard__add"
    >
      I'll add a new habit!
    </button>
  </div>
</div>
`;

exports[`Dashboard component Shows the correct ammount of habits 1`] = `
<div
  className="large-size-container"
>
  <h2
    className="mb-3"
  >
    What have you done this week
    ?
  </h2>
  <div
    className="mb-3 dashboard__table"
  >
    <div
      className="dashboard__row"
    >
      <div
        className="dashboard__cell-habit-container"
      />
      <div
        className="dashboard__cell-frequency-container"
      >
        <h4
          className="dashboard__cell"
        >
          Mon
        </h4>
        <h4
          className="dashboard__cell"
        >
          Tue
        </h4>
        <h4
          className="dashboard__cell"
        >
          Wed
        </h4>
        <h4
          className="dashboard__cell"
        >
          Thu
        </h4>
        <h4
          className="dashboard__cell"
        >
          Fri
        </h4>
        <h4
          className="dashboard__cell"
        >
          Sat
        </h4>
        <h4
          className="dashboard__cell"
        >
          Sun
        </h4>
      </div>
    </div>
    <DashboardRows
      habits={
        Array [
          Object {
            "checked": Array [
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ],
            "frequency": 1,
            "name": "exercise",
          },
          Object {
            "checked": Array [
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ],
            "frequency": 1,
            "name": "read",
          },
        ]
      }
    />
  </div>
  <hr />
  <div
    className="d-flex justify-content-center"
  >
    <button
      className="btn btn-primary btn-lg dashboard__add"
    >
      I'll add a new habit!
    </button>
  </div>
</div>
`;
